--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Ex3</title>
+  <title>Intro to jQuery
+</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2&display=swap" rel="stylesheet"><link rel="stylesheet" href="./style.css">
@@ -10,10 +11,12 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<p >Velox</p>
-<p >Zerda</p>
-<p >Lagopus</p>
+<p id="fox-1">Velox</p>
+<p id="fox-2">Zerda</p>
+<p id="fox-3">Lagopus</p>
 <!-- partial -->
-  
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="scripts.js"></script>
 </body>
 </html>
