--- a/Exercise 2/index.html
+++ b/Exercise 2/index.html
@@ -17,6 +17,8 @@
   <p class="blue">West</p>
 </main>
 <!-- partial -->
-  
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="scripts.js"></script>
 </body>
 </html>
